@@ -1,3 +1,8 @@
+2007-06-13  Quentin Mathe <qmathe@club-internet.fr>
+
+    * MenuBarView.m (-mouseDown:): Fixed system menu initial menu location, now
+    computed on menubar window position rather than screen size.
+
 2007-05-24  Quentin Mathe <qmathe@club-internet.fr>
 
     * GNUmakefile.postamble: Removed DEPENDENCIES variable not needed anymore.
